<resources>
    <string name="app_name">Devkontact</string>
    <string name="new_contact">Nuevo contacto</string>
    <string name="choose_menu">Elije una opción</string>
    <string name="view_all_contact">Todos mis contactos</string>
    <string name="remove_contact">Descartar contacto</string>
    <string name="update_contact">Actualizar contacto</string>
    <string name="add_contact">Agregar contacto</string>
    <string name="type">Clasificación</string>
    <string name="add_url">Sitio web (URL)</string>
    <string name="add_name">Nombre</string>
    <string name="add_phone">Teléfono</string>
    <string name="add_email">Email</string>
    <string name="type_softwarefactory">Fábrica de software</string>
    <string name="type_consulting">Consultora</string>
    <string name="type_developer">Desarrollo a la medida</string>
    <string name="add_description">Servicios o productos</string>
    <string name="enter_contact_id">Introduce el ID de contacto</string>
    <string name="settings">Ajustes</string>
    <string name="type_filter">Filtro</string>
    <string name="type_consulting_filter">Consult.</string>
    <string name="type_developer_filter">Desarrollo.</string>
    <string name="type_softwarefactory_filter">Fabrica</string>
    <string name="filter_contact">Filtrar contactos</string>
</resources>
