<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp">

    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" >
        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent" android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_name"
                android:padding="@dimen/view_padding"
                android:textSize="@dimen/add_edit_textsize"/>

            <EditText
                android:id="@+id/edit_text_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_url"
                android:padding="@dimen/view_padding"
                android:textSize="@dimen/add_edit_textsize"/>

            <EditText
                android:id="@+id/edit_text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_phone"
                android:inputType="phone"
                android:ems="10"
                android:padding="@dimen/view_padding"
                android:textSize="@dimen/add_edit_textsize"/>

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_email"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:padding="@dimen/view_padding"
                android:textSize="@dimen/add_edit_textsize"/>

            <EditText
                android:id="@+id/edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_description"
                android:inputType="textMultiLine"
                android:ems="10"
                android:padding="@dimen/view_padding"
                android:textSize="@dimen/add_edit_textsize" />

            <TextView
                android:id="@+id/text_view_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="@dimen/add_edit_textsize"
                android:paddingRight="25dp"/>

            <CheckBox
                android:id="@+id/check_type_consulting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_consulting"
                android:textSize="@dimen/add_edit_textsize"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/check_type_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_developer"
                android:textSize="@dimen/add_edit_textsize"/>

            <CheckBox
                android:id="@+id/check_type_softwarefactory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_softwarefactory"
                android:textSize="@dimen/add_edit_textsize"/>

            <Button
                android:id="@+id/button_add_update_contact"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_padding"
                android:text="@string/add_contact"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>