<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ViewAllContacts"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/text_view_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_filter"
        android:layout_gravity="left"
        android:textSize="@dimen/add_edit_textsize"
        android:paddingRight="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_type_filter_consulting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_consulting_filter"
            android:textSize="@dimen/add_edit_textsize"
            android:checked="true" />

        <CheckBox
            android:id="@+id/check_type_filter_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_developer_filter"
            android:textSize="@dimen/add_edit_textsize"
            android:checked="true" />

        <CheckBox
            android:id="@+id/check_type_filter_softwarefactory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_softwarefactory_filter"
            android:textSize="@dimen/add_edit_textsize"
            android:checked="true" />
    </LinearLayout>

    <Button
        android:id="@+id/button_filter_contact"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_padding"
        android:text="@string/filter_contact"
        android:layout_gravity="center"/>

    <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"/>

</LinearLayout>